# libjeffpc

./: .gitignore  .hgignore  .hgsigs  .hgtags  CMakeLists.txt  LICENSE  array.c  base64.c  bst.c  buffer.c  buffer_const.c  buffer_heap.c  buffer_impl.h  buffer_sink.c  buffer_static.c  buffer_stdio.c  cbor-dumper.c  cstr.c  error.c  error_impl.h  file_cache.c  file_cache_event_port.c  fmt_cbor.c  fmt_json.c  hexdump.c  init.c  init.h  io.c  io_common.h  jeffpc-comm.mapfile-vers  jeffpc.mapfile-vers  list.c  mapfile-vers  mem_array.c  nvl.c  nvl_convert.c  nvl_dump.c  nvl_fmt_cbor.c  nvl_fmt_json.c  nvl_impl.h  (+58 more)
cmake/: config-datamodel.cmake  config-errno.cmake  config-gnu-ld.cmake  config.cmake  hg.cmake  mapfile.cmake  paths.cmake  test.cmake
cmake/Modules/: Findumem.cmake
cmake/check-for-gnu-ld/: CMakeLists.txt  test.c  version-script
fakeumem/: fakeumem.c
fakeumem/include/: umem.h
include/jeffpc/: .hgignore  array.h  atomic.h  base64.h  bst.h  buffer.h  cbor.h  config-synch.h.in  config.h.in  cstr.h  error.h  file-cache.h  hexdump.h  int.h  io.h  jeffpc.h  json.h  list.h  mem.h  mmap.h  nvl.h  padding.h  qstring.h  rand.h  rbtree.h  refcnt.h  scgi.h  scgisvc.h  sexpr.h  sock.h  socksvc.h  str.h  synch.h  taskq.h  thread.h  time.h  tree_private.h  types.h  unicode.h  urldecode.h  (+3 more)
man/: CMakeLists.txt  hexdump.3  mxinit.3  rand.3  xread.3
tests/: .hgignore  CMakeLists.txt  perf_tree.c  test-file.c  test.c  test_array.c  test_base64_decode.c  test_base64_encode.c  test_buffer.c  test_cbor_pack.c  test_cbor_peek.c  test_cbor_peek_type.c  test_cbor_unpack.c  test_endian.c  test_hexdump.c  test_hostname.c  test_is_p2.c  test_mutex-destroy-held.c  test_mutex-destroy-memcpy.c  test_mutex-destroy-null.c  test_mutex-init-null-both.c  test_mutex-init-null-class.c  test_mutex-init-null-lock.c  test_mutex-lock-destroyed.c  test_mutex-lock-held-class.c  test_mutex-lock-held-multi-common.c  test_mutex-lock-held-multi-first.c  test_mutex-lock-held-multi-second.c  test_mutex-lock-held-multi-third.c  test_mutex-lock-held-nesting.c  test_mutex-lock-held.c  test_mutex-lock-memcpy.c  test_mutex-lock-null.c  test_mutex-unlock-destroyed.c  test_mutex-unlock-memcpy.c  test_mutex-unlock-null.c  test_mutex-unlock-unheld.c  test_nvl.c  test_nvl_pack.c  test_p2roundup.c  (+47 more)
tests/base64/valid/: 1kB-random.b64  1kB-random.b64url  1kB-random.raw  a.b64url  ab.b64url  abc.b64url  abcd.b64  abcd.b64url  abcde.b64  abcde.b64url  abcdef.b64  abcdef.b64url  abcdefg.b64  abcdefg.b64url  empty.b64url  f.b64  f.b64url  ff.b64url  fo.b64  fo.b64url  foo.b64url  foob.b64url  fooba.b64url  foobar.b64url  nul.b64url
tests/cbor-common/valid/: uint-limits-1311768467463790320.lisp  uint-limits-4294967295.cbor
tests/cbor-common/valid-unpack/: indef-array-3int.cbor  indef-array-3int.lisp  indef-array-empty.lisp  indef-array-nested.lisp
tests/cbor-pack/: array-nested.lisp  str-ascii.lisp  str-quote-bslash.lisp  str-unicode-escape-2byte.lisp  str-unicode-escape-3byte.lisp  uint-limits-1311768467463790320.cbor  uint-limits-4294967296.cbor
tests/nvl-pack/: cmd-clear.lisp  multi-bb.cbor  multi-bb.json  multi-bb.lisp  multi-ib.cbor  multi-ib.json  multi-ib.lisp  multi-in.cbor  multi-in.json  multi-in.lisp  single-bool-false.cbor  single-bool-false.json  single-bool-false.lisp  single-bool-true.cbor  single-bool-true.json  single-bool-true.lisp  single-null.cbor  single-null.json  single-null.lisp  single-str.cbor  single-str.json  single-str.lisp  single-u16.cbor  single-u16.json  single-u16.lisp  single-u32.cbor  single-u32.json  single-u32.lisp  single-u64.cbor  single-u64.json  single-u64.lisp  single-u8-medium.cbor  single-u8-medium.json  single-u8-medium.lisp  single-u8-tiny.cbor  single-u8-tiny.json  single-u8-tiny.lisp  uint-limits-0.cbor  uint-limits-0.json  uint-limits-0.lisp  (+33 more)
tests/qstring-basic/: CMakeLists.txt  comment-body.lisp  comment-body.qs  multi-char.lisp  multi-char.qs  no-value-long.lisp  no-value-long.qs  no-value.lisp  one.lisp  two.lisp
tests/sexpr-parser/: CMakeLists.txt  bare-char-printable-utf8.lisp  bare-char-printable.txt  bare-char-unprintable.lisp  bare-char-unprintable.raw  bare-number-dec.lisp  bare-number-hex.lisp  bare-number-oct.lisp  bare-string-bell.lisp  bare-string-bell.raw  bare-string-bslash.txt  bare-string-cr.lisp  bare-string-cr.raw  bare-string-feed.lisp  bare-string-feed.raw  bare-string-tab.lisp  bare-string-tab.raw  bare-string-unicode.lisp  bare-string-utf8.lisp  bare-string.lisp  bare-symbol.lisp  char-nul-hex.lisp  char-nul-hex.raw  char-nul-hex.txt  char-printable-utf8-2byte.raw  char-printable-utf8-3byte.lisp  char-printable-utf8-3byte.txt  char-printable-utf8-4byte.lisp  char-printable-utf8-4byte.txt  char-printable-utf8-list.lisp  char-printable-utf8-list.raw  char-printable-utf8-list.txt  char-space-2.lisp  comment-string.lisp  comment-string.raw  comment-string.txt  comment.lisp  cons-int-nil.raw  cons-nil-int.raw  empty-cons.lisp  (+37 more)
